# heatpump-mcp-server

./: .env.example  .gitignore  .mcp.json  CLAUDE.md  DEVELOPMENT.md  README.md  pyproject.toml
data/: eeweather_stations.json  hpmodels.json
md-files/: QA.md
src/heatpump_mcp_server/: __init__.py  config.py  prompts.py  resources.py  server.py  tools.py
src/heatpump_mcp_server/models/: __init__.py  bill_estimator.py  cold_climate.py  multi_zone.py  project_cost.py  quick_sizer.py
src/heatpump_mcp_server/services/: __init__.py  bill_estimator_service.py  capacity_curve_service.py  cold_climate_service.py  design_temp_service.py  electricity_rate_service.py  heat_pump_models_service.py  multi_zone_service.py  quick_sizer_service.py
